# NEARCrowd

./: .gitignore  Cargo.toml  README.md  deploy.sh
contract/: .gitignore  Cargo.toml  deploy.sh
contract/src/: lib.rs  taskset.rs
contract/src/datastructures/: faucet.rs  queue.rs
src/datastructures/: faucet.rs  mod.rs  queue.rs
